# rust-webframeworks-benchmark

./: .dockerignore  .gitignore  Dockerfile  README  README.md  readme.md
frameworks/actix/: Cargo.toml
frameworks/actix/src/: main.rs
frameworks/axum/: Cargo.toml
frameworks/axum/src/: main.rs
frameworks/file-fetch/: Cargo.toml
frameworks/file-fetch/src/: lib.rs
frameworks/gotham/: Cargo.toml
frameworks/gotham/src/: main.rs
frameworks/hyper/: Cargo.toml
frameworks/hyper/src/: main.rs
frameworks/logic/: Cargo.toml
frameworks/logic/src/: lib.rs
frameworks/rocket/: Cargo.toml  Rocket.toml
frameworks/rocket/src/: main.rs
frameworks/salvo/: Cargo.toml
frameworks/salvo/src/: main.rs
frameworks/thruster/: Cargo.toml
frameworks/thruster/src/: main.rs
frameworks/tide/: Cargo.toml
frameworks/tide/src/: main.rs
frameworks/tiny-http/: Cargo.toml
frameworks/tiny-http/src/: main.rs
frameworks/warp/: Cargo.toml
frameworks/warp/src/: main.rs
logs/: README.md
scripts/: benchmark.sh  common.sh  compile.sh  frameworks.json  run.bat  run.sh
static/: index.html
