[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.2", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "macros"] }
file-fetch = { path = "../file-fetch" }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3