[package]
name = "file-fetch"
version = "0.1.0"
edition = "2021"

[dependencies]
mime_guess = { version = "2.0.4", default-features = false, features = [] }
once_cell = { version = "1.17.1", default-features = false, features = [] }
tokio = { version = "1.28.1", default-features = false, optional = true, features = ["fs", "io-util"] }
tokio-uring = { version = "0.4.0", default-features = false, optional = true, features = [] }

[features]
default = ["tokio"]
std = []
tokio = ["dep:tokio"]
tokio-uring = ["dep:tokio-uring"]