[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.30", default-features = false, features = [] }
futures-util = { version = "0.3.30", default-features = false, features = [] }
gotham = { version = "0.7.2", default-features = false, features = ["derive"] }
mime = { version = "0.3.17", default-features = false, features = [] }
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
file-fetch = { path = "../file-fetch" }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3