[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14.26", default-features = false, features = ["http1", "server", "runtime"] }
serde_json = { version = "1.0.96", default-features = false, features = ["std"] }
tokio = { version = "1.28.1", default-features = false, features = ["rt-multi-thread", "macros"] }
file-fetch = { path = "../file-fetch" }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3