[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = { version = "0.1.0", default-features = false, features = [] }
hyper = { version = "1.1.0", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1.2", default-features = false, features = ["tokio"] }
serde_json = { version = "1.0.108", default-features = false, features = ["std"] }
tokio = { version = "1.35.1", default-features = false, features = ["rt-multi-thread", "net", "macros"] }
file-fetch = { path = "../file-fetch" }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3